2007-02-22  Sven Schuetz

	* internalProvider.c, objectpath.c, Makefile.am, brokerUpc.c,
	fileRepository.h, interopProvider.c, fileRepository.c,
	objectpath.h:
	Fixed 1665255: providergrouping may fail
	Separated InteropProvider and InternalProvider - no more linking
	necessary

2007-02-21  Tyrel Datwyler <tyreld@us.ibm.com>

	* providerDrv.c
	Fixed 1653919: sfcb provider process doesn't die if dlopen fails

2007-02-20  Sven Schuetz

	* queryOperation.c, array.c, value.c:
	Fixed 1663390: problem with where clause in indicationfilter
	
	* README, default.reg, interopProvider.c, providerMgr.c:
	Fixed 1664273: creating a subscription can fail
	
	* brokerUpc.c:
	Fixed 1664453: indications are delivered unfiltered

2007-02-15  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>

	* Makefile.am, configure.ac, genSslCert.sh, httpAdapter.c, 
	sfcCertificateAuthentication.c, sfcb.cfg.pre.in, sfcb.spec.in: 
	Fixed 1660634: Added PAM authentication. Enhanced default configuration
	to use HTTPS if SSL support is enabled. Enhanced the SSL key generation
	script.

2007-02-14  Sven Schuetz

	* brokerUpc.c, array.c, interopProvider.c, cimXmlParser.c:
	Fixed 1652255: restructure broker upcalls

2007-02-09  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>

	* providerRegister.c: 
	Fixed 1656317: check file pointer before closing.

2007-02-07  Chris Buccella

	* httpAdapter.c
	Fixed problem with sfcbd ignoring signals when USE_THREADS enabled

2007-02-06  Sven Schuetz

	* objectImpl.h:
	Fixed compile warning, added function declaration of ClObjectGetObject

2007-02-02  Sven Schuetz

	* cimXmlGen.c:
	Fixed 1650708 embeddedObject qualifier in wrong place

2007-02-02  Sven Schuetz

	* cimXmlOps.y:
	Added some comsmetic changes to the way paramvalues are handled
	in the parser, addition to 1637947

2007-01-31  Sven Schuetz

	* cimXmlRequest.c, cimXmlOps.y, objectImpl.c, instance.c, cimXmlGen.h,
	cimXmlParser.h, cimXmlGen.c, array.c, cimXmlParser.c: